--- a/Lecture/Week 11/Lecture 30 - Macros/Video 3 - Macros.ipynb
+++ b/Lecture/Week 11/Lecture 30 - Macros/Video 3 - Macros.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ok"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(require 'macro)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Writer Note:\n",
+    "The Calysto Scheme kernel does not use the `(define-macro)` syntax. Instead, Calysto Scheme kernel uses `(define-syntax)` to create macros."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,6 +66,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(define-syntax define-macro\n",
+    "  (syntax-rules ()\n",
+    "    ((define-macro (name . args) body ...)\n",
+    "     (define-syntax name\n",
+    "       (rsc-macro-transformer\n",
+    "         (let ((transformer (lambda args body ...)))\n",
+    "           (lambda (exp env)\n",
+    "              (apply transformer (cdr exp)))))))))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -47,60 +91,31 @@
      "text": [
       "\u001b[0;31m\n",
       "Traceback (most recent call last):\n",
-      "  File \"In [2]\", line 1, col 22\n",
-      "RunTimeError: unbound variable 'expr'\n",
+      "  File \"In [2]\", line 3, col 1\n",
+      "ParseError: no matching clause found for (define-macro (twice expr) (list (quote begin) expr expr))\n",
       "\n",
       "\u001b[0m"
      ]
     }
    ],
    "source": [
+    "; This is the define-macro syntax. It's included here for educational purpose and assignments\n",
+    "\n",
     "(define-macro (twice expr)\n",
     " (list 'begin expr expr))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "(define-syntax twice)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0;31m\n",
-      "Traceback (most recent call last):\n",
-      "  File \"In [3]\", line 1, col 15\n",
-      "RunTimeError: unbound variable 'twice'\n",
-      "\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
-   "source": [
-    "(define-macro twice\n",
-    "              (lambda expr\n",
-    "                list 'begin expr expr))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%python\n",
+    "; This is the define-syntax version that works for the Calysto Scheme. Use this version when actually executing the cells\n",
+    "; in the notebook\n",
     "\n",
-    "x = 42\n"
+    "(define-syntax twice\n",
+    "  [(twice ?expr) (list 'begin ?expr ?expr)])"
    ]
   },
   {
@@ -114,13 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2\n",
       "2\n"
      ]
     },
@@ -130,7 +146,7 @@
        "(begin <void> <void>)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,13 +345,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2\n",
       "2\n"
      ]
     },
@@ -345,7 +362,7 @@
        "(begin <void> <void>)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +441,7 @@
      "text": [
       "\u001b[0;31m\n",
       "Traceback (most recent call last):\n",
-      "  File \"In [10]\", line 1, col 22\n",
+      "  File \"In [21]\", line 1, col 22\n",
       "RunTimeError: unbound variable 'expr'\n",
       "\n",
       "\u001b[0m"
@@ -510,40 +527,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The program works! Unfortunately, it doesn't tell us which part fails when the code fails. In order to do that, we need access to the expression that was evaluated, `(> x 0)`. "
+    "The program works! Unfortunately, it doesn't tell us which part fails when the code fails. In order to do that, we need access to the expression that was evaluated, `(> x 0)`. In order to do that, we would need a macro. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "(define-syntax (check expr)\n",
-    "              (list 'if expr ''passed\n",
-    "                    (list 'quote (list 'failed: expr))))"
+    "; The define-macro version\n",
+    "(define-macro (check expr)\n",
+    " (list 'if expr ''passed ''fail)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "; The define-syntax version\n",
+    "(define-syntax check\n",
+    "  [(check ?expr) (list 'if ?expr ''passed ''fail)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0;31m\n",
-      "Traceback (most recent call last):\n",
-      "  File \"In [15]\", line 1, col 2\n",
-      "RunTimeError: unbound variable 'define-macro'\n",
-      "\n",
-      "\u001b[0m"
-     ]
+     "data": {
+      "text/plain": [
+       "(if #f (quote passed) (quote fail))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "(define-macro x)"
+    "(define x -2)\n",
+    "(check (> x 0))"
    ]
   },
   {
