--- a/Lecture/Week 12/Lecture 31 - Streams/Video 3 - Streams.ipynb
+++ b/Lecture/Week 12/Lecture 31 - Streams/Video 3 - Streams.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A stream is a lazily computed Scheme list. It's a linked list where the first element is represented explicitly, but the rest is represented implicitly and may never be computed at all if nobody asks for it.\n",
+    "A stream is a lazily computed Scheme list. It's a linked list where the first element is represented explicitly, but the rest is represented implicitly and may never be computed at all if we don't ask for it.\n",
     "\n",
     "A stream is a list, but the rest of the list is computed only when needed.\n",
     "\n",
@@ -119,17 +119,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(define-syntax cons-stream\n",
+    "  (syntax-rules ()\n",
+    "    ((cons-stream x y)\n",
+    "     (cons x (delay y)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1;31m\n",
+      "\u001b[0;31m\n",
       "Traceback (most recent call last):\n",
-      "  File \"In [5]\", line 1, col 7\n",
-      "RunTimeError: unbound variable 'cons-stream'\n",
+      "  File \"In [8]\", line 1, col 6\n",
+      "ParseError: no matching clause found for (cons-stream 1 2)\n",
       "\n",
       "\u001b[0m"
      ]
@@ -137,6 +149,28 @@
    ],
    "source": [
     "(car (cons-stream 1 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31m\n",
+      "Traceback (most recent call last):\n",
+      "  File \"In [3]\", line 1, col 2\n",
+      "RunTimeError: unbound variable 'stream'\n",
+      "\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "(stream 1)"
    ]
   },
   {
@@ -165,5 +199,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
