--- a/Lecture/Week 12/Lecture 32 - Declarative Programming/Video 2 - Declarative Languages.ipynb
+++ b/Lecture/Week 12/Lecture 32 - Declarative Programming/Video 2 - Declarative Languages.ipynb
@@ -72,11 +72,199 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Writer's note:\n",
+    "Run the following cells before running any SQL cells."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%load_ext sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Connected: @None'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql sqlite://"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To execute SQL statement, make sure to include `%%sql` at the top of the cell."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In SQL we can have statements such as the following,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite://\n",
+      "(sqlite3.OperationalError) table cities already exists\n",
+      "[SQL: create table cities as\n",
+      "    select 38 as latitude, 122 as longitude, \"Berkeley\" as name union\n",
+      "    select 42,             71,               \"Cambridge\"        union\n",
+      "    select 45,             93,               \"Minneapolis\";]\n",
+      "(Background on this error at: http://sqlalche.me/e/e3q8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "create table cities as\n",
+    "    select 38 as latitude, 122 as longitude, \"Berkeley\" as name union\n",
+    "    select 42,             71,               \"Cambridge\"        union\n",
+    "    select 45,             93,               \"Minneapolis\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite://\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>latitude</th>\n",
+       "        <th>longitude</th>\n",
+       "        <th>name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>38</td>\n",
+       "        <td>122</td>\n",
+       "        <td>Berkeley</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>42</td>\n",
+       "        <td>71</td>\n",
+       "        <td>Cambridge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>45</td>\n",
+       "        <td>93</td>\n",
+       "        <td>Minneapolis</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(38, 122, 'Berkeley'), (42, 71, 'Cambridge'), (45, 93, 'Minneapolis')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select * from cities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the table `cities` that we just created, we can create another table!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite://\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>region</th>\n",
+       "        <th>name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>other</td>\n",
+       "        <td>Cambridge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>other</td>\n",
+       "        <td>Minneapolis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>west coast</td>\n",
+       "        <td>Berkeley</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('other', 'Cambridge'), ('other', 'Minneapolis'), ('west coast', 'Berkeley')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select \"west coast\" as region, name from cities where longitude >= 115 union\n",
+    "select \"other\",                name from cities where longitude <  115;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next few lectures go thrugh the details of what happened with these different statements. However, the main idea from these are statements about the structure of the things that are created, and those statements don't explain how to compute it.  "
+   ]
   }
  ],
  "metadata": {
