--- a/Lecture/Week 12/Lecture 32 - Declarative Programming/Video 5 - Arithmetic.ipynb
+++ b/Lecture/Week 12/Lecture 32 - Declarative Programming/Video 5 - Arithmetic.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,6 +221,92 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite://\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>word</th>\n",
+       "        <th>value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>zero</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>one</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>two</td>\n",
+       "        <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>three</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>four</td>\n",
+       "        <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>five</td>\n",
+       "        <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>six</td>\n",
+       "        <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>seven</td>\n",
+       "        <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>eight</td>\n",
+       "        <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>nine</td>\n",
+       "        <td>9</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('zero', 0),\n",
+       " ('one', 1),\n",
+       " ('two', 2),\n",
+       " ('three', 3),\n",
+       " ('four', 4),\n",
+       " ('five', 5),\n",
+       " ('six', 6),\n",
+       " ('seven', 7),\n",
+       " ('eight', 8),\n",
+       " ('nine', 9)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select word, one + two + four + eight as value from ints order by value;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -235,8 +321,66 @@
     "\n",
     "<img src = 'b.png' width = 150/>\n",
     "\n",
-    "`5` and `7` are not included because they're not the powers of 2. "
+    "`5` and `7` are not included because they're not the powers of 2. \n",
+    "\n",
+    "#### Strategy\n",
+    "This is quite tricky. Notice in the original table that for numbers that are powers of 2, there are only one number for each column, and the rest are `0`s. One way is to filter by dividing each column by itself and see if the sum of the row is 1."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite://\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>word</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>eight</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>four</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>one</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>two</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('eight',), ('four',), ('one',), ('two',)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select word from ints where one + two / 2 + four / 4 + eight / 8 = 1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
