Refactor image files in Week 1 Lectures

--- a/Lecture/Week 1/Lecture 2 - Names/Video 2 - Names, Assignment, and User-defined Functions.ipynb
+++ b/Lecture/Week 1/Lecture 2 - Names/Video 2 - Names, Assignment, and User-defined Functions.ipynb
@@ -945,12 +945,13 @@
     "    * String (e.g. `'hello'`)\n",
     "    \n",
     "2. `Call` expression, which look like the following,\n",
-    "<img src = 'call.jpg' width = 500/>\n",
+    "![](images/call.png)\n",
     "\n",
     "    * It is also possible to use a call expression without operands (e.g. `area()`)\n",
     "    * We can also do nested call expression\n",
     "    * An operand can also be a call expression \n",
-    "<img src = 'operand.jpg' width = 500/>"
+    "    \n",
+    "![](images/operand.png)"
    ]
   },
   {
@@ -1006,9 +1007,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
